--- a/css/js-tile-game.css
+++ b/css/js-tile-game.css
@@ -46,6 +46,9 @@ div.tileRef {
     position: absolute;
     width: 0;
     height: 0;
+    top: 0;
+    left: 0;
     border: 15px solid;
-    border-color: transparent transparent #063 transparent;
+    border-color: transparent transparent transparent #063;
+    transition: transform 0.3s;
 }
